header desktop done

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
         <div class="header__inner container">
             <a href="" class="header__logo logo">
                 <img
-                    class="logo__image"
+                    class="header__logo-image"
                     src="./images/logo.svg"
                     alt="Xpage"
                     width="99" height="25" loading="lazy"
@@ -32,6 +32,19 @@
                     </li>
                 </ul>
             </nav>
+            <div class="header__actions">
+                <button class="header__button-menu button button--transparent hidden-mobile" type="button">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.21094 17L19.3131 17.0061" stroke="#202020" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/>
+                        <path d="M5.21094 12H19.3131" stroke="#202020" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/>
+                        <path d="M5.21094 7L19.3131 7.00684" stroke="#202020" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/>
+                    </svg>
+                    <span class="header__button-text">Меню</span>
+                </button>
+                <button class="header__button-profile button hidden-mobile" type="button">
+                    <span class="header__button-text">Геннадий П.</span>
+                </button>
+            </div>
         </div>
     </header>
 </body>
