--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,7 @@
                     </li>
                 </ul>
             </nav>
-            <div class="header__actions">
-                <button class="header__button-menu button button--transparent hidden-mobile" type="button">
+                <button class="header__button-menu button button--transparent" type="button">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5.21094 17L19.3131 17.0061" stroke="#202020" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/>
                         <path d="M5.21094 12H19.3131" stroke="#202020" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/>
@@ -41,10 +40,9 @@
                     </svg>
                     <span class="header__button-text">Меню</span>
                 </button>
-                <button class="header__button-profile button hidden-mobile" type="button">
+                <button class="header__button-profile button" type="button">
                     <span class="header__button-text">Геннадий П.</span>
                 </button>
-            </div>
         </div>
     </header>
 </body>
