--- a/src/index.html
+++ b/src/index.html
@@ -32,18 +32,46 @@
                     </li>
                 </ul>
             </nav>
-                <button class="header__button-menu button button--transparent" type="button">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M5.21094 17L19.3131 17.0061" stroke="#202020" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/>
-                        <path d="M5.21094 12H19.3131" stroke="#202020" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/>
-                        <path d="M5.21094 7L19.3131 7.00684" stroke="#202020" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/>
-                    </svg>
-                    <span class="header__button-text">Меню</span>
-                </button>
-                <button class="header__button-profile button" type="button">
-                    <span class="header__button-text">Геннадий П.</span>
-                </button>
+            <button class="header__button-menu button button--transparent" type="button">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5.21094 17L19.3131 17.0061" stroke="#202020" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/>
+                    <path d="M5.21094 12H19.3131" stroke="#202020" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/>
+                    <path d="M5.21094 7L19.3131 7.00684" stroke="#202020" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/>
+                </svg>
+                <span class="header__button-text">Меню</span>
+            </button>
+            <button class="header__button-profile button" type="button">
+                <span class="header__button-text">Геннадий П.</span>
+            </button>
         </div>
     </header>
+    <main class="content">
+        <section class="section container">
+            <div class="section__body">
+                <div class="hero">
+                    <h1 class="hero__title">
+                        Найди с кем<br>поиграть в баскет
+                    </h1>
+                    <div class="hero__actions">
+                        <button class="hero__button button" data-bg="1">Играй</button>
+                        <button class="hero__button button" data-bg="2">Учись</button>
+                        <button class="hero__button button" data-bg="3">Смотри</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+<script>
+    document.querySelectorAll('.hero__button').forEach(button => {
+        button.addEventListener('mouseenter', function() {
+            const backgroundImage = this.getAttribute('data-bg');
+            document.querySelector('.section').style.backgroundImage = `url('./images/${backgroundImage}.jpg')`;
+        });
+
+        button.addEventListener('mouseleave', function() {
+            document.querySelector('.section').style.backgroundImage = `url('./images/3.jpg')`;
+        });
+    });
+</script>
 </html>
