--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
                         <ul class="material__list">
                             <li class="material__item">
                                 <article class="material-card">
-                                    <h4 class="material-card__title">Видеоуроки</h4>
+                                    <a href="" class="material-card__title">Видеоуроки</a>
                                     <div class="material-card__body">
                                         <img src="./images/match.jpg" alt="" class="material-card__image hidden-desktop" width="270" height="152">
                                         <div class="material-card__text">
@@ -160,7 +160,7 @@
                             </li>
                             <li class="material__item">
                                 <article class="material-card">
-                                    <h4 class="material-card__title">Статьи</h4>
+                                    <a href="" class="material-card__title">Статьи</a>
                                     <div class="material-card__text">
                                         <h5>Евгений Воронов: «Бронзовые медали - оценка труда нашей команды»</h5>
                                         <button class="material-card__button button">26 октября</button>
@@ -169,7 +169,7 @@
                             </li>
                             <li class="material-card__item">
                                 <article class="material-card">
-                                    <h4 class="material-card__title">Термины</h4>
+                                    <a href="" class="material-card__title">Термины</a>
                                     <div class="material-card__actions">
                                         <button class="material-card__button button">Треха</button>
                                         <button class="material-card__button button">Треховчковый бросок</button>
